# zcash_script

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile.am  README.md  build.rs  configure.ac  rust-toolchain.toml  zcash.patch
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml
bindgen/: bindings.rs  sodium.rs
depend/zcash/: configure.ac  libzcash_script.pc.in
depend/zcash/qa/rpc-tests/: mergetoaddress_sapling.py
depend/zcash/qa/rpc-tests/test_framework/: util.py
depend/zcash/src/: Makefile.am  chain.h  chainparams.cpp  hash.h  init.cpp  main.cpp  main.h  mempool_limit.cpp  miner.cpp  miner.h  net.cpp  prevector.h  pubkey.cpp  pubkey.h  serialize.h  transaction_builder.cpp  transaction_builder.h  txmempool.cpp  utiltest.cpp  validationinterface.cpp  zcbenchmarks.cpp
depend/zcash/src/consensus/: params.h
depend/zcash/src/crypto/: common.h  equihash.cpp
depend/zcash/src/gtest/: test_foundersreward.cpp  test_mempoollimit.cpp  test_miner.cpp  test_transaction_builder.cpp
depend/zcash/src/primitives/: transaction.cpp  transaction.h
depend/zcash/src/rpc/: blockchain.cpp  mining.cpp
depend/zcash/src/rust/src/: blake2b.rs  bundlecache.rs  metrics_ffi.rs  orchard_ffi.rs
depend/zcash/src/script/: interpreter.cpp  interpreter.h  script.h  script_error.h  standard.cpp  zcash_script.cpp  zcash_script.h
depend/zcash/src/secp256k1/src/: ecmult.h  ecmult_gen.h  util.h
depend/zcash/src/test/: script_tests.cpp  test_bitcoin.cpp
depend/zcash/src/test/data/: script_invalid.json  script_tests.json  script_valid.json
depend/zcash/src/wallet/: asyncrpcoperation_mergetoaddress.cpp  asyncrpcoperation_mergetoaddress.h  asyncrpcoperation_sendmany.cpp  asyncrpcoperation_shieldcoinbase.cpp  paymentdisclosure.cpp  rpcdump.cpp  rpcwallet.cpp  wallet.cpp
depend/zcash/src/wallet/gtest/: test_wallet.cpp
depend/zcash/src/wallet/test/: rpc_wallet_tests.cpp
depend/zcash/src/zcash/: IncrementalMerkleTree.hpp  Note.cpp  NoteEncryption.cpp  cache.cpp
depend/zcash/zcutil/: make-release.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare.rs
include/: sodium.h
libzcash_script/: CHANGELOG.md  Cargo.toml  README.md
libzcash_script/depend/expected/include/tl/: expected.hpp
libzcash_script/depend/zcash/src/: amount.cpp  serialize.h
libzcash_script/depend/zcash/src/script/: interpreter.h
libzcash_script/depend/zcash/src/test/data/: script_tests.json
libzcash_script/src/: lib.rs  ztrait.rs
src/: Makefile.am  Makefile.gtest.include  Makefile.test.include  blake2b.rs  bridge.rs  builder_ffi.rs  bundlecache.rs  chainparams.cpp  cxx.rs  incremental_merkle_tree.rs  init.cpp  interpreter.rs  lib.rs  main.cpp  main.h  mempool_limit.cpp  mempool_limit.h  merkle_frontier.rs  metrics.cpp  metrics.h  miner.cpp  miner.h  net.cpp  note_encryption.rs  num.rs  op.rs  orchard_bundle.rs  orchard_ffi  orchard_ffi.rs  params.rs  pattern.rs  pow.cpp  proof_verifier.cpp  pv.rs  sapling.rs  script.rs  script_error.rs  serialize.h  signature.rs  solver.rs  (+15 more)
src/consensus/: funding.cpp  funding.h  params.cpp  params.h
src/crypto/: equihash.cpp  equihash.h
src/gtest/: main.cpp  test_checktransaction.cpp  test_equihash.cpp  test_foundersreward.cpp  test_joinsplit.cpp  test_noteencryption.cpp  test_transaction.cpp  test_validation.cpp
src/opcode/: mod.rs  operation.rs  push_value.rs
src/pow/tromp/: equi.h  equi_miner.h
src/primitives/: transaction.cpp  transaction.h
src/rpc/: misc.cpp  rawtransaction.cpp
src/rust/include/: librustzcash.h
src/rust/include/rust/: blake2b.h
src/rust/src/: rustzcash.rs
src/script/: iter.rs  mod.rs  num.rs  standard.h  zcash_script.cpp  zcash_script.h
src/test/: coins_tests.cpp  script_tests.cpp  sighash_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp
src/test_vectors/: invalid.rs  mod.rs  valid.rs  vectors.rs
src/wallet/: asyncrpcoperation_common.cpp  asyncrpcoperation_common.h  asyncrpcoperation_mergetoaddress.cpp  asyncrpcoperation_mergetoaddress.h  asyncrpcoperation_saplingmigration.cpp  asyncrpcoperation_sendmany.cpp  asyncrpcoperation_sendmany.h  asyncrpcoperation_shieldcoinbase.cpp  asyncrpcoperation_shieldcoinbase.h  rpcdisclosure.cpp  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h
src/wallet/gtest/: test_wallet.cpp  test_wallet_zkeys.cpp
src/wallet/test/: rpc_wallet_tests.cpp
src/zcash/: IncrementalMerkleTree.cpp  JoinSplit.cpp  Note.cpp  NoteEncryption.cpp  prf.cpp
src/zcash/address/: zip32.cpp
zcash_script/: CHANGELOG.md  Cargo.toml  README.md
zcash_script/src/: descriptor.rs  interpreter.rs  lib.rs  num.rs  op.rs  pattern.rs  signature.rs  solver.rs  test_vectors.rs
zcash_script/src/descriptor/: encoding.rs
zcash_script/src/opcode/: mod.rs  push_value.rs
zcash_script/src/script/: iter.rs  mod.rs
zcutil/: make-release.py
