[package]
rust-version = "1.85" # C++ linking was broken in rust 1.82–1.84
name = "zcash_script"
version = "0.3.2"
authors = [
    "Electric Coin Company <info@electriccoin.co>",
    "Greg Pfeil <greg@technomadic.org>",
    "Tamas Blummer <tamas.blummer@gmail.com>",
    "Zcash Foundation <zebra@zfnd.org>",
]
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
description = "ffi bindings to zcashd's zcash_script library"
documentation = "https://docs.rs/zcash_script"
repository = "https://github.com/ZcashFoundation/zcash_script"
include = [
    "Cargo.toml",
    "/LICENSE",
    "/README.md",
    "build.rs",
    "src/*.rs",
    "src/*/*.rs",
    "/depend/check_uint128_t.c",
    "/depend/zcash/src/amount.cpp",
    "/depend/zcash/src/amount.h",
    "/depend/zcash/src/compat/byteswap.h",
    "/depend/zcash/src/compat/endian.h",
    "/depend/zcash/src/consensus/consensus.h",
    "/depend/zcash/src/crypto/common.h",
    "/depend/zcash/src/crypto/ripemd160.cpp",
    "/depend/zcash/src/crypto/ripemd160.h",
    "/depend/zcash/src/crypto/sha1.cpp",
    "/depend/zcash/src/crypto/sha1.h",
    "/depend/zcash/src/crypto/sha256.cpp",
    "/depend/zcash/src/crypto/sha256.h",
    "/depend/zcash/src/hash.h",
    "/depend/zcash/src/key_constants.h",
    "/depend/zcash/src/prevector.h",
    "/depend/zcash/src/primitives/transaction.h",
    "/depend/zcash/src/pubkey.cpp",
    "/depend/zcash/src/pubkey.h",
    "/depend/zcash/src/script/interpreter.cpp",
    "/depend/zcash/src/script/interpreter.h",
    "/depend/zcash/src/script/script_error.cpp",
    "/depend/zcash/src/script/script_error.h",
    "/depend/zcash/src/script/script.cpp",
    "/depend/zcash/src/script/script.h",
    "/depend/zcash/src/script/zcash_script.cpp",
    "/depend/zcash/src/script/zcash_script.h",
    "/depend/zcash/src/secp256k1/",
    "/depend/zcash/src/serialize.h",
    "/depend/zcash/src/tinyformat.h",
    "/depend/zcash/src/uint256.cpp",
    "/depend/zcash/src/uint256.h",
    "/depend/zcash/src/util/strencodings.cpp",
    "/depend/zcash/src/util/strencodings.h",
    "/depend/zcash/src/version.h",
]

[lib]
name = "zcash_script"
path = "src/lib.rs"

[features]
external-secp = []
test-dependencies = []

[dependencies]
bitflags = "2.8"
enum_primitive = "0.1"
ripemd = "0.1"
# This needs to match the version used by ECC crates (which are being used in
# Zebra).
secp256k1 = "0.29"
sha-1 = "0.10"
sha2 = "0.10"
tracing = "0.1"
thiserror = "2.0"

[build-dependencies]
# We want zcash-script to be compatible with whatever version of `bindgen` that
# is being indirectly used by Zebra via the `rocksdb` dependency. To avoid
# having to update zcash-script every time Zebra updates its `rocksdb`
# dependency, we allow any version of `bindgen`, even major version bumps, by
# using the `>=` operator. There is some chance that this breaks the build if a
# breaking API change affects us, but we can always fix it then.
bindgen = ">= 0.69.5"
# Same reasoning as above
cc = { version = ">= 1.2.11", features = ["parallel"] }

[dev-dependencies]
# Same reasoning as above
hex = ">= 0.4.3"
lazy_static = "1.5.0"
proptest = "1.6"

[target.'cfg(linux)'.dev-dependencies]
libfuzzer-sys = "0.4"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace="{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "#!\\[doc\\(html_root_url.*"
replace = "#![doc(html_root_url = \"https://docs.rs/{{crate_name}}/{{version}}\")]"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace="...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace="{{date}}"
exactly=1

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-header -->"
replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly=1

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-url -->"
replace="<!-- next-url -->\n[Unreleased]: https://github.com/ZcashFoundation/{{crate_name}}/compare/{{tag_name}}...HEAD"
exactly=1
