# Note [explicit >= version requirements]
# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Some dependencies are shared with a lot of other Zebra dependencies, so they have an explicit `>=`
# in the version requirement (e.g., `version = ">= 0.1.2"`), which treats minor versions with a zero
# major version as compatible (Cargo doesn't by default
# (https://doc.rust-lang.org/cargo/reference/semver.html#change-categories)). This allows them to
# match the specific version required by Zebra while using the latest version in CI to catch any
# breaking changes in newer releases.

[workspace]
resolver = "2"
members = [
    "fuzz",
    "libzcash_script",
    "zcash_script",
]

[workspace.package]
rust-version = "1.81"
authors = [
    "Electric Coin Company <info@electriccoin.co>",
    "Greg Pfeil <greg@technomadic.org>",
    "Tamas Blummer <tamas.blummer@gmail.com>",
    "Zcash Foundation <zebra@zfnd.org>",
]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/ZcashFoundation/zcash_script"

[workspace.dependencies]
# Intra-workspace dependencies
libzcash_script = { version = "0.1", path = "libzcash_script" }
zcash_script = { version = "0.4", path = "zcash_script" }

# C++ build dependencies
# See Note [explicit >= version requirements]
bindgen = { version = ">= 0.69.5", default-features = false, features = ["runtime"] }
# See Note [explicit >= version requirements]
cc = { version = ">= 1.2.11", features = ["parallel"] }

# Digests
ripemd = { version = "0.1", default-features = false }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

# Encodings
bitflags = "2.8"
# See Note [explicit >= version requirements]
hex = { version = ">= 0.4.3", default-features = false }

# Errors
thiserror = { version = "2", default-features = false }

# Logging
tracing = { version = "0.1", default-features = false }

# Transparent protocol
# This needs to match the version used by ECC crates (which are being used in
# Zebra).
bip32 = { version = "=0.6.0-pre.1", default-features = false, features = ["alloc", "secp256k1-ffi"] }
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"] }

# Static constants
lazy_static = "1.5"

# Type safety
bounded-vec = "0.9"

# Tests
libfuzzer-sys = "0.4"
proptest = "1.6"
