[package]
name = "zcash_script-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
zcash_primitives = "0.19"
zcash_script = { path = "..", features = ["test-dependencies"] }

[[bin]]
name = "compare"
path = "fuzz_targets/compare.rs"
test = false
doc = false
bench = false
