[package]
name = "libzcash_script"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
build = "build.rs"
edition.workspace = true
description = "ffi bindings to zcashd's zcash_script library"
documentation = "https://docs.rs/libzcash_script"
repository.workspace = true
include = [
    "Cargo.toml",
    "/LICENSE",
    "/README.md",
    "build.rs",
    "src/*.rs",
    "src/*/*.rs",
    "/depend/check_uint128_t.c",
    "/depend/zcash/src/amount.cpp",
    "/depend/zcash/src/amount.h",
    "/depend/zcash/src/compat/byteswap.h",
    "/depend/zcash/src/compat/endian.h",
    "/depend/zcash/src/consensus/consensus.h",
    "/depend/zcash/src/crypto/common.h",
    "/depend/zcash/src/crypto/ripemd160.cpp",
    "/depend/zcash/src/crypto/ripemd160.h",
    "/depend/zcash/src/crypto/sha1.cpp",
    "/depend/zcash/src/crypto/sha1.h",
    "/depend/zcash/src/crypto/sha256.cpp",
    "/depend/zcash/src/crypto/sha256.h",
    "/depend/zcash/src/hash.h",
    "/depend/zcash/src/key_constants.h",
    "/depend/zcash/src/prevector.h",
    "/depend/zcash/src/primitives/transaction.h",
    "/depend/zcash/src/pubkey.cpp",
    "/depend/zcash/src/pubkey.h",
    "/depend/zcash/src/script/interpreter.cpp",
    "/depend/zcash/src/script/interpreter.h",
    "/depend/zcash/src/script/script_error.cpp",
    "/depend/zcash/src/script/script_error.h",
    "/depend/zcash/src/script/script.cpp",
    "/depend/zcash/src/script/script.h",
    "/depend/zcash/src/script/zcash_script.cpp",
    "/depend/zcash/src/script/zcash_script.h",
    "/depend/zcash/src/secp256k1/",
    "/depend/zcash/src/serialize.h",
    "/depend/zcash/src/tinyformat.h",
    "/depend/zcash/src/uint256.cpp",
    "/depend/zcash/src/uint256.h",
    "/depend/zcash/src/util/strencodings.cpp",
    "/depend/zcash/src/util/strencodings.h",
    "/depend/zcash/src/version.h",
]

[lib]
name = "libzcash_script"
path = "src/lib.rs"

[features]
default = ["std", "signature-validation"]
signature-validation = ["zcash_script/signature-validation"]
std = ["zcash_script/std"]
external-secp = []

[dependencies]
zcash_script.workspace = true

tracing.workspace = true
thiserror.workspace = true

[build-dependencies]
bindgen.workspace = true
cc.workspace = true

[dev-dependencies]
zcash_script = { path = "../zcash_script", features = ["test-dependencies"] }

hex.workspace = true
lazy_static.workspace = true
proptest.workspace = true

[target.'cfg(linux)'.dev-dependencies]
libfuzzer-sys.workspace = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace="{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "#!\\[doc\\(html_root_url.*"
replace = "#![doc(html_root_url = \"https://docs.rs/{{crate_name}}/{{version}}\")]"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace="...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace="{{date}}"
exactly=1

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-header -->"
replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly=1

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-url -->"
replace="<!-- next-url -->\n[Unreleased]: https://github.com/ZcashFoundation/{{crate_name}}/compare/{{tag_name}}...HEAD"
exactly=1
